<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputLayout"
        style="@style/InputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginHorizontal="@dimen/indent_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/totalRecordsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_records"
        android:layout_marginStart="@dimen/indent_24"
        android:layout_marginTop="@dimen/indent_10"
        android:textAppearance="@style/TextAppearance.Medium.16.DarkGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchInputLayout" />

    <TextView
        android:id="@+id/totalRecordsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_4"
        android:textAppearance="@style/TextAppearance.Medium.16.DarkGray"
        app:layout_constraintStart_toEndOf="@id/totalRecordsTextView"
        app:layout_constraintTop_toTopOf="@id/totalRecordsTextView"
        app:layout_constraintBottom_toBottomOf="@id/totalRecordsTextView"
        tools:text="44"/>

    <TextView
        android:id="@+id/foundRecordsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_records"
        android:layout_marginStart="@dimen/indent_24"
        android:layout_marginTop="@dimen/indent_10"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.Medium.16.DarkGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalRecordsTextView" />

    <TextView
        android:id="@+id/foundRecordsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_4"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.Medium.16.DarkGray"
        app:layout_constraintStart_toEndOf="@id/foundRecordsTextView"
        app:layout_constraintTop_toTopOf="@id/foundRecordsTextView"
        app:layout_constraintBottom_toBottomOf="@id/foundRecordsTextView"
        tools:text="44"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="totalRecordsTextView,foundRecordsTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indent_4"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:backgroundTint="@color/purple_200"
        android:background="@color/purple_200"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add" />
</androidx.constraintlayout.widget.ConstraintLayout>